[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flights-scrape-scheduler"
version = "0.1.0"
description = "A short description of my project."
dependencies = [
    "flask[async]",
    "flask-cors",
    "aiofiles",
    "gunicorn",
    "pydantic"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "scheduler/",
]
