[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flights-scrape-scheduler"
version = "0.1.0"
authors = [
  { name="Pietrek xD", email="pietrek.j@gmail.com" },
]
description = "Simple service scheduling scraping workers"
requires-python = ">=3.12"
dependencies = [
    "flask[async]",
    "flask-cors",
    "aiofiles",
    "gunicorn",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["scheduler"]
