[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flights-scrape-webdrv"
version = "0.1.0"
authors = [
  { name="Pietrek xD", email="pietrek.j@gmail.com" },
]
description = "Simple service scheduling scraping workers"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "websockets"
]

[tool.setuptools.packages.find]
where = ["webdrv"]
