[project]
name = "search_flights"
version = "0.0.1"
dependencies = []

[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.21"]
build-backend = "setuptools.build_meta"

[tool.cython]
language_level = "3"

[tool.setuptools]
packages = ["search_flights"]

[[tool.setuptools.ext-modules]]
name = "search_flights.flight_optim"
sources = ["search_flights/flight_optim.pyx"]
language = "c++"
extra-compile-args = ["-std=c++17", "-march=native", "-Ofast"]

[tool.setuptools.cmdclass]
build_ext = "Cython.Build.build_ext"
